# ecatalog

./: .env.example  .gitignore  README.md  lint.sh  pyproject.toml
blog/: admin.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: blogpost_confirm_delete.html  blogpost_detail.html  blogpost_form.html  blogpost_list.html
catalog/: apps.py  context_processors.py  forms.py  models.py  services.py  signals.py  urls.py  views.py
catalog/fixtures/: categories.json  products.json
catalog/management/commands/: fill_db.py
catalog/migrations/: 0001_initial.py  0002_alter_product_options_product_owner.py
catalog/templates/: base.html  contacts.html  index.html  product_confirm_delete.html  product_create.html  product_detail.html
catalog/templates/catalog/: contacts.html
catalog/templates/category/: category_confirm_delete.html  category_detail.html  category_form.html  category_list.html
catalog/templates/common/: footer.html  navbar.html
config/: settings.py  urls.py
main/: forms.py  urls.py  views.py
main/templates/: contacts.html  test.html
main/templates/common/: footer.html  navbar.html
static/css/: main.css
users/: admin.py  forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_managers.py
users/templates/users/: login.html  profile.html  register.html
