[project]
name = "ecatalog"
version = "0.1.0"
description = "Учебный проект по созданию системы управления каталогом товаров"
authors = [
    { name = "Sergey Ivanov", email = "ivanitch.mail@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (>=6.0.5,<7.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "psycopg (>=3.3.4,<4.0.0)",
    "pillow (>=12.2.0,<13.0.0)",
    "ipython (>=9.14.1,<10.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest-cov (>=7.1.0,<8.0.0)",
    "pytest (>=9.0.3,<10.0.0)"
]
lint = [
    "flake8 (>=7.3.0,<8.0.0)",
    "black (>=26.5.1,<27.0.0)",
    "isort (>=8.0.1,<9.0.0)",
    "mypy (>=2.1.0,<3.0.0)"
]

[tool.black]
line-length = 119
exclude = '''
/(
    \.git
)/
'''

[tool.isort]
line_length = 119
profile = "black"

[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true
